Tema 2, Tema 3 updated.

--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -1156,6 +1156,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font color=purple> EXTRA: Naprogramujte výpočty (resp. tabuľku) z Príkladu 5 v Pythone. Za správne a okomentované riešenie je možné získať jeden bonusový bod. </font> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***\n",
     "<a id=zdroje></a>\n",
     " # <font color=brown> Použité zdroje</font> "
