Tema0, Tema3 updated.

--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -1000,7 +1000,7 @@
     "Tabuľka sa vypĺňa po riadkoch. Zrejme \n",
     "\n",
     "\\begin{equation*} \\label{eq:RichExtTabSteps1} \\tag{16} \n",
-    "    T_{si}=F_{i+1}\\left(h/2^{s-i}\\right), \\quad F_i(h_s)=T_{i+s-1,i+1}. \n",
+    "    T_{si}=F_{i+1}\\left(h/2^{s-i}\\right), \\quad F_i(h_s)=T_{i+s-1,i-1}. \n",
     "\\end{equation*} \n",
     "\n",
     "Prvok $T_{s0}$ v prvom stĺpci tabuľky vypočítame pomocou základnej metódy $F=F_1$, \n",
