--- a/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
+++ b/Tema2/NUM_Tema2AproximaciaFunkcii.ipynb
@@ -4358,7 +4358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ďalej nájdeme kubický splajn i analyticky. Jedna možnosť by bola postupovať podľa dôkazu Tvrdenia 3, tzn. nájsť výsledný splajn ako lineárnu kombináciu bázických funkcií. K tomu je potrebné nájsť koeficienty lineárnej kombinácie a teda vyriešiť príslušnú sústavu rovníc. Ukážeme si teraz ale iný prístup. Vo všeobecnoti, ak máme zadaných $n$ bodov (uzlov) $[x_1,y_1], \\ldots, [x_n,y_n]$, tak vieme, že výsledný splajn bude pozostávať z $n-1$ polynómov tretieho stupňa (každý môže byť iný), pričom každý z polynómov bude spájať dva susedné body (uzly - viď obrázok pod Definíciou 4). Označme tieto polynómy $S_i(x)=a_ix_i^3+b_ix_i^2+c_ix_i+d_i$ pre $i=0,1,\\ldots, n-1$. Miesto podmienok v Definícii 7, kde boli kladené podmienky na výsledný kubický splajn, sformulujme nasledujúce podmienky pre jednotlivé kubické polynómy, z ktorých splajn pozostáva: \n",
+    "Ďalej nájdeme kubický splajn i analyticky. Jedna možnosť by bola postupovať podľa dôkazu Tvrdenia 3, tzn. nájsť výsledný splajn ako lineárnu kombináciu bázických funkcií. K tomu je potrebné nájsť koeficienty lineárnej kombinácie a teda vyriešiť príslušnú sústavu rovníc. Ukážeme si teraz ale iný prístup. Vo všeobecnoti, ak máme zadaných $n$ bodov (uzlov) $[x_1,y_1], \\ldots, [x_n,y_n]$, tak vieme, že výsledný splajn bude pozostávať z $n-1$ polynómov tretieho stupňa (každý môže byť iný), pričom každý z polynómov bude spájať dva susedné body (uzly - viď obrázok pod Definíciou 4). Označme tieto polynómy $S_i(x)=a_ix_i^3+b_ix_i^2+c_ix_i+d_i$ pre $i=1,2,\\ldots, n-1$. Miesto podmienok v Definícii 7, kde boli kladené podmienky na výsledný kubický splajn, sformulujme nasledujúce podmienky pre jednotlivé kubické polynómy, z ktorých splajn pozostáva: \n",
     "\n",
     "* Kubické polynómy musia spájať dva susedné body (uzly), preto musí platiť (vznikne $2(n-1)$ rovníc):  \n",
     "\n",
@@ -4915,7 +4915,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4929,7 +4929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
