--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -623,7 +623,7 @@
     "\n",
     "![LagApproxDiff7.PNG](attachment:LagApproxDiff7.PNG) \n",
     "\n",
-    "Ak by sme v prostrednej (druhej) formule nahradili $x_0+h$ výrazom $x_0$ a v poslednej (tretej) formule nahradili $x_0+2h$ výrazom $x_0$, tak by sme dostai pre aproximáciu $f'(x_0)$ tieto tri vzťahy: \n",
+    "Ak by sme v prostrednej (druhej) formule nahradili $x_0+h$ výrazom $x_0$ a v poslednej (tretej) formule nahradili $x_0+2h$ výrazom $x_0$, tak by sme dostali pre aproximáciu $f'(x_0)$ tieto tri vzťahy: \n",
     "\n",
     "![LagApproxDiff8.PNG](attachment:LagApproxDiff8.PNG) \n",
     "\n",
@@ -1224,7 +1224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1238,7 +1238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
