--- a/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanie.ipynb
@@ -924,7 +924,7 @@
     "F(h)=a_0+a_1h^2+a_2h^4+a_3h^6+\\ldots, \\quad h\\in(0,h_0\\rangle.\n",
     "\\end{equation*} \n",
     "\n",
-    "Pre malé $h$ je zrejme $F(h)$ dobrou aproximáciou $F(0)=a_0$. Pokúsime sa ale nájsť lepšiu aproximáciu pre $a_0$. Začneme tým, že vypoćítame $F\\left(\\frac{h}{2}\\right)$. Podľa \\eqref{eq:RichExtPowSerExp2} platí \n",
+    "Pre malé $h$ je zrejme $F(h)$ dobrou aproximáciou $F(0)=a_0$. Pokúsime sa ale nájsť lepšiu aproximáciu pre $a_0$. Začneme tým, že vypočítame $F\\left(\\frac{h}{2}\\right)$. Podľa \\eqref{eq:RichExtPowSerExp} platí \n",
     "\n",
     "\\begin{equation*} \\label{eq:RichExtPowSerExp2} \\tag{10} \n",
     "F\\left(\\frac{h}{2}\\right)=a_0+a_1\\left(\\frac{h}{2}\\right)^2+a_2\\left(\\frac{h}{2}\\right)^4+a_3\\left(\\frac{h}{2}\\right)^6+\\ldots \n",
