Tema3Ulohy updated.

--- a/Tema3/NUM_Tema3NumerickeDerivovanieUlohy.ipynb
+++ b/Tema3/NUM_Tema3NumerickeDerivovanieUlohy.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**1. Uvažujte funkciu $f(x)=\\sin(x)(1-x)$.** \n",
+    "**$\\clubsuit$ 1. Uvažujte funkciu $f(x)=\\sin(x)(1-x)$.** \n",
     "\n",
     "**a) Nájdite $f'(x)$ \"ručne\" a overte napr. pomocou balíla *SymPy*.** \n",
     "\n",
@@ -274,7 +274,7 @@
    "source": [
     "---\n",
     "\n",
-    "**4. Napíšte kód, ktorý nájde aproximácie prvého rádu pre (prvé) derivácie funkcie $f(x)=\\sin(x)-x\\sin(x)$ na intervale $x\\in(0,15)$. Váš kód by mal vykresliť vedľa seba dva grafy:** \n",
+    "**$\\clubsuit$ 4. Napíšte kód, ktorý nájde aproximácie prvého rádu pre (prvé) derivácie funkcie $f(x)=\\sin(x)-x\\sin(x)$ na intervale $x\\in(0,15)$. Váš kód by mal vykresliť vedľa seba dva grafy:** \n",
     "\n",
     "* **Graf na ľavej strane by mal zobrazovať funkciu modrou farbou a približnú prvú deriváciu ako červenú prerušovanú krivku. Vzorový kód pre tento problém je uvedený nižšie.** "
    ]
@@ -406,7 +406,7 @@
    "source": [
     "--- \n",
     "\n",
-    "**7. Zvoľte si konkrétnu funkciu $f$ podľa vlastného uváženia. Následne vypočítajte numerické derivácie (podľa vzťahov uvedených nižšie), absolútne i relatívne chyby týchto aproximácií a vizualizujte ich do jedného grafu. Vezmite napr. $h=10^{-1},10^{-2},10^{-3}\\ldots10^{-10}$, prípadne zvážte vhodnejší rozsah pre $h$ a tiež možnosť využitia logaritmickej škály. Ilustrujte vizuálne fakt, že ide o metódy rôznych rádov (tzn. rôznej presnosti).** \n",
+    "**$\\clubsuit$ 7. Zvoľte si konkrétnu funkciu $f$ podľa vlastného uváženia a tiež vhodný bod $x_0$. Následne vypočítajte numerické derivácie (podľa vzťahov uvedených nižšie), absolútne i relatívne chyby týchto aproximácií a vizualizujte ich do jedného grafu. Vezmite napr. $h=10^{-1},10^{-2},10^{-3}\\ldots10^{-10}$, prípadne zvážte vhodnejší rozsah pre $h$ a tiež možnosť využitia logaritmickej škály. Ilustrujte vizuálne fakt, že ide o metódy rôznych rádov (tzn. rôznej presnosti).** \n",
     "\n",
     "![Taylor2.PNG](attachment:Taylor2.PNG) \n"
    ]
@@ -503,7 +503,7 @@
    "source": [
     "---\n",
     "\n",
-    "**11. Uvažujte metódu pre aproximáciu derivácie takú, ktorej zaokrúhľovacia chyba je $\\mathcal{O}\\left(\\varepsilon/h\\right)$ a diskretizačná chyba je $\\mathcal{O}\\left(h^n\\right)$. Aplikovaním postupu pre ohraničenie chyby, ktorý bol ilustrovaný v učebnom texte pri odvodení $(8)$, ukážte, že optimálne $h$ je $\\mathcal{O}\\left(\\varepsilon^{1/(n+1)}\\right)$ a hranica pre minimálnu dosiahnuteľnú chybu je $\\mathcal{O}\\left(\\varepsilon^{n/(n+1)}\\right)$.**"
+    "**$\\clubsuit$ 11. Uvažujte metódu pre aproximáciu derivácie takú, ktorej zaokrúhľovacia chyba je $\\mathcal{O}\\left(\\varepsilon/h\\right)$ a diskretizačná chyba je $\\mathcal{O}\\left(h^n\\right)$. Aplikovaním postupu pre ohraničenie chyby, ktorý bol ilustrovaný v učebnom texte pri odvodení $(8)$, ukážte, že optimálne $h$ je $\\mathcal{O}\\left(\\varepsilon^{1/(n+1)}\\right)$ a hranica pre minimálnu dosiahnuteľnú chybu je $\\mathcal{O}\\left(\\varepsilon^{n/(n+1)}\\right)$.**"
    ]
   },
   {
@@ -524,15 +524,15 @@
    "source": [
     "--- \n",
     "\n",
-    "**12. Uvažujte nasledujúcu formulu pre výpočet derivácie** \n",
+    "**$\\clubsuit$ 12. Uvažujte nasledujúcu formulu pre výpočet derivácie** \n",
     "\n",
     "![finiteDiffForm1.PNG](attachment:finiteDiffForm1.PNG) \n",
     "\n",
-    "**a) Analogicky ako v $(8)$ odvoďte hranicu pre chybu (zaokrúhľovaciu (*round-off*) aj diskretizačnú (*truncation*)).** \n",
+    "**a) Analogicky ako v $(8)$ v učebnom texte odvoďte hranicu pre chybu (zaokrúhľovaciu (*round-off*) aj diskretizačnú (*truncation*)).** \n",
     "\n",
     "**b) Určte optimálne $h$ a minimálnu dosiahnuteľnú hranicu pre chybu.** \n",
     "\n",
-    "**c) S využitím uvedeného vzorca zostrojte podobnú tabuľku ako v Príklade 2.** \n",
+    "**c) S využitím uvedeného vzorca zostrojte podobnú tabuľku ako v Príklade 2 v učebnom texte.** \n",
     "\n",
     "**d) Porovnajte výsledky v tabuľke s optimálnym $h$ a s minimálnou dosiahnuteľnou chybou, ktoré ste zistili pred tým (v časti b) ).**\n"
    ]
@@ -618,13 +618,15 @@
    "source": [
     "--- \n",
     "\n",
-    "**16. Vytvorte procedúru, ktorá vypočíta numerickú deriváciu funkcie v bode pomocou vzťahu $f'(x)\\approx\\dfrac{f(x+h)-f(x-h)}{2h}$ a Richardsonovej extrapolácie. Na testovanie procedúry použite napr. derivácie týchto funkcií v príslušných bodoch:** \n",
+    "**$\\clubsuit$ 16. Vytvorte procedúru, ktorá vypočíta numerickú deriváciu funkcie v bode pomocou vzťahu $f'(x)\\approx\\dfrac{f(x+h)-f(x-h)}{2h}$ a Richardsonovej extrapolácie. Na testovanie procedúr použite napr. derivácie týchto funkcií v príslušných bodoch:** \n",
     "\n",
     "* $f(x)=\\cos(x),\\,x=0$; \n",
     "\n",
     "* $f(x)=\\mathrm{arctan}(x),\\,x=1$; \n",
     "\n",
-    "* $f(x)=|x|,\\,x=0$. \n"
+    "* $f(x)=|x|,\\,x=0$. \n",
+    "\n",
+    "**Urobte numerické porovnanie (z hľadiska presnosti aj času) oboch implementácií.**"
    ]
   },
   {
@@ -696,7 +698,7 @@
     "\n",
     "**a) $f'(x)\\approx\\dfrac{f(x+2h)-f(x-2h)}{4h}$;** \n",
     "\n",
-    "**b) $f''(x)\\approx\\dfrac{f(x+2h)-2f(x)+f(x-2h)}{4h^2}$;** \n",
+    "**$\\clubsuit$ b) $f''(x)\\approx\\dfrac{f(x+2h)-2f(x)+f(x-2h)}{4h^2}$;** \n",
     "\n",
     "**c) $f'''(x)\\approx\\dfrac{f(x+2h)-2f(x+h)+2f(x-h)-f(x-2h)}{2h^3}$;** \n",
     "\n",
@@ -768,11 +770,11 @@
    "source": [
     "--- \n",
     "\n",
-    "**22. Nové palivo pre rekreačné lode, ktoré sa vyvíja na miestnej univerzite, testoval tím inžinierov v oblasti rybníka. Ich záujmom je zdokumentovať vplyv paliva na životné prostredie – ako rýchlo sa škvrna šíri? Nasledujúca tabuľka ukazuje kamerový záznam polomeru vlny generovanej kvapkou paliva, ktorá spadla do jazierka. S využitím dátovej tabuľky uvedenej na konci určte:** \n",
+    "**$\\clubsuit$ 22. Nové palivo pre rekreačné lode, ktoré sa vyvíja na miestnej univerzite, testoval tím inžinierov v oblasti rybníka. Ich záujmom je zdokumentovať vplyv paliva na životné prostredie – ako rýchlo sa škvrna šíri? Nasledujúca tabuľka ukazuje kamerový záznam polomeru vlny generovanej kvapkou paliva, ktorá spadla do jazierka. S využitím dátovej tabuľky uvedenej na konci určte:** \n",
     "\n",
     "**a) Intenzitu (resp. okamžitú rýchlosť) s akou sa polomer kvapky menil v čase $t=2$.** \n",
     "\n",
-    "**b) Intenzitu (resp. okamžitú rýchlosť) s akou sa plocha kontaminantu šírila v jazierku.**\n",
+    "**b) Intenzitu (resp. okamžitú rýchlosť) s akou sa plocha kontaminantu šírila v jazierku v čase $t=2$.**\n",
     "\n",
     "![t11.PNG](attachment:t11.PNG) \n",
     "\n",
@@ -795,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**23. Nasledujúca tabuľka reprezentuje vývoj populácie - počet ľudí $n(t)$ v čase $t$, pričom intenzita pôrodnosti je konštantná ($b=2$) a intenzita úmrtnosti je daná vzťahom $d(t)=0.01n(t)$:** \n",
+    "**$\\clubsuit$ 23. Nasledujúca tabuľka reprezentuje vývoj populácie - počet ľudí $n(t)$ v čase $t$, pričom intenzita pôrodnosti je konštantná ($b=2$) a intenzita úmrtnosti je daná vzťahom $d(t)=0.01n(t)$:** \n",
     "\n",
     "![t12.PNG](attachment:t12.PNG) \n",
     "\n",
@@ -808,11 +810,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "**24. Pre funkciu $f(x)=\\sin\\left(x^2\\right)+\\dfrac{\\mathrm{arctg}(x)}{1+x^4}$ vypočítajte približne jej prvú deriváciu na intervale $\\langle 0,2 \\rangle$ pomocou vzorca $f'(x)\\approx\\dfrac{f(x+h)-f(x-h)}{2h}$ s krokom $h=0.25$ aj $h=0.1$. Výsledky porovnajte s hodnotami presne vypočítanej derivácie.** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "**$\\clubsuit$ 25. Pre funkciu $f(x)=\\sin\\left(x^2\\right)+\\mathrm{arctg}(x)$ vypočítajte približne jej druhú deriváciu na intervale $\\langle 0,2 \\rangle$ pomocou vzorca $f''(x)\\approx\\dfrac{f(x+h)-2f(x)+f(x-h)}{h^2}$ s krokom $h=0.25$ aj $h=0.1$. Výsledky porovnajte s hodnotami presne vypočítanej derivácie.**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -826,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
