--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -598,7 +598,7 @@
     "\n",
     "### <font color=red> Definícia 3 </font> \n",
     "\n",
-    "Nech $G$ je podmnožina $\\mathbb{R}$ alebo $\\mathbb{C}$,na ktorej je definovaná (reálna) funkcia $g$. Hovoríme, že $z\\in G$ je **_pevný bod_** funkcie $g$, ak platí $g(z)=z$. \n",
+    "Nech $G$ je podmnožina $\\mathbb{R}$ alebo $\\mathbb{C}$, na ktorej je definovaná (reálna) funkcia $g$. Hovoríme, že $z\\in G$ je **_pevný bod_** funkcie $g$, ak platí $g(z)=z$. \n",
     "\n",
     "--- "
    ]
@@ -845,7 +845,7 @@
     "\n",
     "Vezmime $g(x)=-\\dfrac{x^3}{6}+\\dfrac{x^5}{120}$ a chceme nájsť Lipschitzovu konštantu $L$ na intervale $\\langle -1/2, 1/2 \\rangle$. \n",
     "\n",
-    "Výpočet urobíme s využitím [intervalovej aritmetiky](https://sandbigbox.com/wiki/cs/Interval_arithmetic), pomocou ktorej efektívne vyčíslime $g'$ na intervale $\\langle -1/2, 1/2 \\rangle$. Keďže $g'(x)-=\\dfrac{x^2}{2}+\\dfrac{x^4}{24}$, tak máme \n",
+    "Výpočet urobíme s využitím [intervalovej aritmetiky](https://cs.wikipedia.org/wiki/Intervalov%C3%A1_aritmetika), pomocou ktorej efektívne vyčíslime $g'$ na intervale $\\langle -1/2, 1/2 \\rangle$. Keďže $g'(x)=-\\dfrac{x^2}{2}+\\dfrac{x^4}{24}$, tak máme \n",
     "\n",
     "$$g'\\left(\\langle-1/2,1/2\\rangle\\right)\\in-\\dfrac{1}{2}\\langle-1/2,1/2\\rangle^2+\\dfrac{1}{24}\\langle-1/2,1/2\\rangle^4=-\\dfrac{1}{2}\\langle0,1/4\\rangle+\\dfrac{1}{24}\\langle0,1/16\\rangle=\\langle-1/8,0\\rangle+\\langle0,1/384\\rangle\\subseteq\\langle-0.125,0\\rangle+\\langle0,0.002605\\rangle\\subseteq\\langle-0.125,0.00261\\rangle.$$\n",
     "\n",
@@ -1905,8 +1905,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú metódu na riešenie nelineárnej rovnice tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 2 bonusové body. Za interaktívny kód pre každú ďalšiu metódu je možné získať po jednom bonusovom bode navyše. </font> "
    ]
   },
