--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Korene nelineárnej rovnice $f(x)=0$ vo všeobecnosti nevieme vyjadriť explicitným vzorcom.** Príkladom môže byť rovnica $x-\\mathrm{tan}(x)=0$ vyskytujúca sa pri difrakcii (ohybe) svetla alebo Keplerova rovnica $x-b\\sin(x)=0$ používaná pri výpočte obežných dráh planét. Ďalej sa môže jednať o transcendentálne rovnice ako napr. $f(x)=e^x+x=0$ či algebraické rovnice ako napr. $x^7+4x^5-7x^2+6x+3=0$. Výnimkou sú napr. prípady, keď $f$ je kvadratická alebo kubická či bikvadratická (kvartická) polynomická funkcia. **K vyriešeniu nelineárnej rovnice preto používame numerické iteračné metódy.** **Ich spoločná myšlienka spočíva v tom, že z jednej alebo z viacerých počiatočných aproximácií (odhadov) hľadaného koreňa $x^*$ generujeme postupnosť $x_0,x_1,x_2,\\ldots$ takú, že táto postupnosť konverguje ku koreňu $x^*$.** Pre niektoré metódy postačuje zadať interval $\\langle a,b \\rangle$ obsahujúci hľadaný koreň. Iné metódy zase vyžadujú, aby počiatočná aproximácia (štartovací bod) bola dostatočne blízko k hľadanému koreňu, no a tieto metódy potom konvergujú k skutočnému koreňu rýchlejšie. Častokrát sa teda začína s \"hrubou\" (menej presnou resp. pomalšie konvergujúcou) ale spoľahlivou metódou a keď sme už dostatočne blízko hľadaného koreňa, tak prejdeme na \"jemnejšiu\" (presnejšíu resp. rýchlejšie konvergujúcu) metódu. \n",
+    "**Korene nelineárnej rovnice $f(x)=0$ vo všeobecnosti nevieme vyjadriť explicitným vzorcom.** Príkladom môže byť rovnica $x-\\mathrm{tan}(x)=0$ vyskytujúca sa pri difrakcii (ohybe) svetla alebo Keplerova rovnica $x-b\\sin(x)=0$ používaná pri výpočte obežných dráh planét. Ďalej sa môže jednať o transcendentálne rovnice ako napr. $f(x)=e^x+x=0$ či algebraické rovnice ako napr. $x^7+4x^5-7x^2+6x+3=0$. Výnimkou sú napr. prípady, keď $f$ je kvadratická alebo kubická či bikvadratická (kvartická) polynomická funkcia. **K vyriešeniu nelineárnej rovnice preto používame numerické iteračné metódy.** **Ich spoločná myšlienka spočíva v tom, že z jednej alebo z viacerých počiatočných aproximácií (odhadov) hľadaného koreňa $x^*$ generujeme postupnosť $x_0,x_1,x_2,\\ldots$ takú, že táto postupnosť konverguje ku koreňu $x^*$.** Pre niektoré metódy postačuje zadať interval $\\langle a,b \\rangle$ obsahujúci hľadaný koreň. Iné metódy zase vyžadujú, aby počiatočná aproximácia (štartovací bod) bola dostatočne blízko k hľadanému koreňu, no a tieto metódy potom konvergujú k skutočnému koreňu rýchlejšie. Častokrát sa teda začína s \"hrubou\" (menej presnou resp. pomalšie konvergujúcou) ale spoľahlivou metódou a keď sme už dostatočne blízko hľadaného koreňa, tak prejdeme na \"jemnejšiu\" (presnejšiu resp. rýchlejšie konvergujúcu) metódu. \n",
     "\n",
     "Kvôli zjednodušeniu našich úvah sa obmedzíme na hľadanie jednoduchého reálneho koreňa $x^*$ nelineárnej rovnice $f(x)=0$, tzn., že predpokladáme $f'\\left(x^*\\right)\\neq0$. Automaticky budeme predpokladať, že funkcia $f$ je spojitá na intervale $\\langle a,b \\rangle$ a má toľko spojitých derivácií, koľko si ich daná situácia vyžaduje. "
    ]
@@ -730,13 +730,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pred dôkazom dôležitej matematickej vety, ktorá má čo dočinenia s konvergenciou metódy prostej iterácie, pripomenieme ešte jeden dôležitý pojem. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
     "### <font color=red> Definícia 5 </font> \n",
@@ -858,7 +851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ďalej budeme predpokladať, že $G$ je [***uzavretá množina***](http://www.iam.fmph.uniba.sk/skripta/maiii/ii2.pdf) ([ekvivalentné definície](https://mathworld.wolfram.com/ClosedSet.html)), v našom prípade sa stačí obmedziť na uzavretý interval. Nepotrebujeme robiť úvahy príliš všeobecne. "
+    "Ďalej budeme predpokladať, že $G$ je [**_uzavretá množina_**](http://www.iam.fmph.uniba.sk/skripta/maiii/ii2.pdf) ([ekvivalentné definície](https://mathworld.wolfram.com/ClosedSet.html)), v našom prípade sa stačí obmedziť na uzavretý interval. Nepotrebujeme robiť úvahy príliš všeobecne. "
    ]
   },
   {
@@ -1848,7 +1841,7 @@
     "\n",
     "čo platí za predpokladu, že $f'$ sa v blízkosti koreňa príliš nemení. Vypočítať $x^*$ s menšou chybou než $\\varepsilon^*_x$ teda nemožno. Preto sa $\\varepsilon^*_x$ nazýva **_dosiahnuteľná presnosť koreňa_** $x^*$. \n",
     "\n",
-    "Všimnite si nasledovnú vec: keď je veľkosť smernice $\\left|f'\\left(x^*\\right)\\right|$ v koreni $x^*$ malá, dosiahnuteľná presnosť $\\varepsilon^*_x$ je veľká (pozri obrázok nižšie). V takom prípade je výpočet koreňa $x^*$ **zle podmienená úloha**: totiž malá zmena $f$ vyvolá veľkú zmenu $x^*$. \n",
+    "Všimnite si nasledovnú vec: keď je veľkosť smernice $\\left|f'\\left(x^*\\right)\\right|$ v koreni $x^*$ malá (funkcia sa \"nemení prudko\"), dosiahnuteľná presnosť $\\varepsilon^*_x$ je veľká (pozri obrázok nižšie). V takom prípade je výpočet koreňa $x^*$ **zle podmienená úloha**: totiž malá zmena $f$ vyvolá veľkú zmenu $x^*$ (my chceme $\\varepsilon^*_x$ čo najmenšie). \n",
     "\n",
     "![o8.PNG](attachment:o8.PNG) \n",
     "$$\\text{Zdroj: Čermák (2020).}$$ \n",
@@ -1871,7 +1864,7 @@
     "\n",
     "Pokiaľ nás zaujímajú všetky korene polynómu $p_n(x)$, tak po nájdení reálneho koreňa $x^*$, vydelíme polynóm $p_n(x)$ členom (resp. polynómom) $x-x^*$. Takto vznikne polynóm $p_{n-1}(x)=\\dfrac{p_n(x)}{x-x^*}$ stupňa $n-1$ a ďalej hľadáme korene tohto nového polynómu nižšieho stupňa. Ak je $x^*$ komplexný koreň, tak potom je určite koreň aj komplexne združné číslo s ním, t. j. $\\bar{x}^*$. V takom prípade sa vydelí polynóm $p_n(x)$ s reálnymi koeficientmi kvadratickým polynómom $\\left(x-x^*\\right)\\left(x-\\bar{x}^*\\right)$, čím vznikne polynóm $p_{n-2}(x)$ stupňa $n-2$ s reálnymi koeficientmi a pokračuje sa hľadaním koreňov tohto polynómu. \n",
     "\n",
-    "Pre výpočet polynómov sú samozrejme navrhnuté i špeciálne, efektívne metódy. "
+    "Pre numerický výpočet koreňov polynómov sú navrhnuté i špecializované, efektívne metódy. "
    ]
   },
   {
