--- a/Tema5/NUM_Tema5NelinearneRovniceUlohyUcebnyText.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovniceUlohyUcebnyText.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "---\n",
     "\n",
-    "**3. Odkrokujte (v Python-e) výpočet z Príkladu 14..** \n"
+    "**3. Odkrokujte (v Python-e) výpočet z Príkladu 14.** \n"
    ]
   },
   {
