--- a/Tema5/NUM_Tema5NelinearneRovniceUlohy.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovniceUlohy.ipynb
@@ -496,6 +496,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "--- \n",
+    "\n",
+    "**24. Uvažujte postupnosť definovanú vzťahom $x_{k+1}=b+\\epsilon h^2(x_k)$, $k=0,1,2,\\ldots$, kde $x_0\\in\\mathbb{R}$ je dané a $b,\\epsilon\\in\\mathbb{R}$. Ďalej predpokladajte:** \n",
+    "\n",
+    "**a) $\\exists M>0$ také, že $|h(x)|\\le M$ $\\forall x \\in \\mathbb{R}$.;** \n",
+    "\n",
+    "**b) $\\exists L>0$ také, že $|h(v)-h(w)|\\le L|v-w|$ $\\forall v,w\\in\\mathbb{R}$.** \n",
+    "\n",
+    "**Dokážte, že ak $2ML|\\epsilon|<1$, potom existuje jediné $z\\in\\mathbb{R}$ také, že $z=b+\\epsilon h^2(z)$ a postupnosť $\\left\\{x_k\\right\\}_{k=0}^{\\infty}$ konverguje k tejto hodnote $z$.** \n",
+    "\n",
+    "_Pomôcka: Využite téoriu o kontraktívnom zobrazení._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "<font color=purple> EXTRA: Naprogramujte (jednu) vybranú iteračnú metódu na riešenie nelineárnej rovnice tak, aby výsledkom bol interaktívny kód, kde bude možné nastaviť vstupné parametre, metódu odkrokovať a sledovať graficky, čo sa deje v jednotlivých iteráciách. V prípade korektného, okomentovaného kódu je možné získať 2 bonusové body. Za interaktívny kód pre každú ďalšiu metódu je možné získať po jednom bonusovom bode navyše. </font> "
