--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -1889,7 +1889,7 @@
     "\n",
     "#### Poznámka 16 \n",
     "\n",
-    "Metódu prostej iterácie ako aj Newtonovu metódu je možné rozšíriť na numerické riešenie sústav nelineárnych rovníc. Princíp pevného bodu je dôležitý napr. aj pri diferenciálnych rovniciach v matematickej analýze. \n",
+    "**Metódu prostej iterácie ako aj Newtonovu metódu je možné rozšíriť na numerické riešenie sústav nelineárnych rovníc** (pozrite napr. doplnkové materiály). Princíp pevného bodu je dôležitý napr. aj pri diferenciálnych rovniciach v matematickej analýze. \n",
     "\n",
     "---"
    ]
