--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -838,7 +838,7 @@
     "\n",
     "Vezmime $g(x)=-\\dfrac{x^3}{6}+\\dfrac{x^5}{120}$ a chceme nájsť Lipschitzovu konštantu $L$ na intervale $\\langle -1/2, 1/2 \\rangle$. \n",
     "\n",
-    "Výpočet urobíme s využitím [intervalovej aritmetiky](https://cs.wikipedia.org/wiki/Intervalov%C3%A1_aritmetika), pomocou ktorej efektívne vyčíslime $g'$ na intervale $\\langle -1/2, 1/2 \\rangle$. Keďže $g'(x)=-\\dfrac{x^2}{2}+\\dfrac{x^4}{24}$, tak máme \n",
+    "Výpočet urobíme s využitím [intervalovej aritmetiky](https://en.wikipedia.org/wiki/Interval_arithmetic?oldid=725297870), pomocou ktorej efektívne vyčíslime $g'$ na intervale $\\langle -1/2, 1/2 \\rangle$. Keďže $g'(x)=-\\dfrac{x^2}{2}+\\dfrac{x^4}{24}$, tak máme \n",
     "\n",
     "$$g'\\left(\\langle-1/2,1/2\\rangle\\right)\\in-\\dfrac{1}{2}\\langle-1/2,1/2\\rangle^2+\\dfrac{1}{24}\\langle-1/2,1/2\\rangle^4=-\\dfrac{1}{2}\\langle0,1/4\\rangle+\\dfrac{1}{24}\\langle0,1/16\\rangle=\\langle-1/8,0\\rangle+\\langle0,1/384\\rangle\\subseteq\\langle-0.125,0\\rangle+\\langle0,0.002605\\rangle\\subseteq\\langle-0.125,0.00261\\rangle.$$\n",
     "\n",
@@ -1966,7 +1966,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1980,7 +1980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
