--- a/Tema5/NUM_Tema5NelinearneRovnice.ipynb
+++ b/Tema5/NUM_Tema5NelinearneRovnice.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,34 +304,40 @@
       "k=0:\n",
       "f(a0)= 1.365883939231586 f(b0)= -5.362810292697273\n",
       "===================================================\n",
-      "k=1:\n",
+      "k=0:\n",
       "f(a0)*f(x1)= -0.5258927074721728\n",
       "x1= 1.5\n",
-      "absolutna chyba je nanajvys 0.25\n",
+      "absolutna chyba je nanajvys 0.5\n",
       "===================================================\n",
-      "k=2:\n",
+      "k=1:\n",
       "f(a1)*f(x2)= 1.1511853925791038\n",
       "x2= 1.25\n",
-      "absolutna chyba je nanajvys 0.125\n",
+      "absolutna chyba je nanajvys 0.25\n",
       "aproximacia korena s presnostou 0.25\n",
       "===================================================\n",
-      "k=3:\n",
+      "k=2:\n",
       "f(a2)*f(x3)= 0.2730402587706575\n",
       "x3= 1.375\n",
-      "absolutna chyba je nanajvys 0.0625\n",
+      "absolutna chyba je nanajvys 0.125\n",
       "aproximacia korena s presnostou 0.125\n",
       "===================================================\n",
-      "k=4:\n",
+      "k=3:\n",
       "f(a3)*f(x4)= -0.001925058726308186\n",
       "x4= 1.4375\n",
-      "absolutna chyba je nanajvys 0.03125\n",
+      "absolutna chyba je nanajvys 0.0625\n",
       "aproximacia korena s presnostou 0.0625\n",
       "===================================================\n",
-      "k=5:\n",
+      "k=4:\n",
       "f(a4)*f(x5)= 0.05347226414401043\n",
       "x5= 1.40625\n",
-      "absolutna chyba je nanajvys 0.015625\n",
+      "absolutna chyba je nanajvys 0.03125\n",
       "aproximacia korena s presnostou 0.03125\n",
+      "===================================================\n",
+      "k=5:\n",
+      "f(a4)*f(x6)= 0.026267412591095506\n",
+      "x6= 1.421875\n",
+      "absolutna chyba je nanajvys 0.015625\n",
+      "aproximacia korena s presnostou 0.015625\n",
       "===================================================\n"
      ]
     }
@@ -341,60 +347,69 @@
     "def f(x): \n",
     "    return 4*np.sin(x) - x**3 - 1 \n",
     "\n",
-    "# k = 0\n",
+    "\n",
     "a0, b0 = 1, 2 \n",
     "print('k=0:')\n",
     "print('f(a0)=', f(a0), 'f(b0)=', f(b0))\n",
     "print('===================================================')\n",
     "\n",
-    "# k = 1\n",
+    "# k = 0\n",
     "x1 = (a0+b0)/2 \n",
-    "print('k=1:')\n",
+    "print('k=0:')\n",
     "print('f(a0)*f(x1)=',f(a0)*f(x1))\n",
     "print('x1=',x1) \n",
-    "print('absolutna chyba je nanajvys', 2**(-2)*(b0-a0))\n",
+    "print('absolutna chyba je nanajvys', 2**(-1)*(b0-a0))\n",
     "print('===================================================')\n",
-    "a1, b1 = a0, x1\n",
+    "a1 = a0; b1 = x1 \n",
     "\n",
-    "# k = 2 \n",
+    "# k = 1 \n",
     "x2 = (a1+b1)/2\n",
-    "print('k=2:')\n",
+    "print('k=1:')\n",
     "print('f(a1)*f(x2)=',f(a1)*f(x2))\n",
     "print('x2=',x2) \n",
-    "print('absolutna chyba je nanajvys', 2**(-3)*(b0-a0)) \n",
+    "print('absolutna chyba je nanajvys', 2**(-2)*(b0-a0)) \n",
     "print('aproximacia korena s presnostou', np.abs(x2-x1))\n",
     "print('===================================================')\n",
-    "a2, b2 = x2, b1\n",
+    "a2 = x2; b2 = b1 \n",
     "\n",
-    "# k = 3 \n",
+    "# k = 2 \n",
     "x3 = (a2+b2)/2\n",
-    "print('k=3:')\n",
+    "print('k=2:')\n",
     "print('f(a2)*f(x3)=',f(a2)*f(x3))\n",
     "print('x3=',x3) \n",
-    "print('absolutna chyba je nanajvys', 2**(-4)*(b0-a0)) \n",
+    "print('absolutna chyba je nanajvys', 2**(-3)*(b0-a0)) \n",
     "print('aproximacia korena s presnostou', np.abs(x3-x2))\n",
     "print('===================================================')\n",
-    "a3, b3 = x3, b2 \n",
+    "a3 = x3; b3 = b2  \n",
     "\n",
-    "# k = 4 \n",
+    "# k = 3 \n",
     "x4 = (a3+b3)/2\n",
-    "print('k=4:')\n",
+    "print('k=3:')\n",
     "print('f(a3)*f(x4)=',f(a3)*f(x4))\n",
     "print('x4=',x4) \n",
-    "print('absolutna chyba je nanajvys', 2**(-5)*(b0-a0))\n",
+    "print('absolutna chyba je nanajvys', 2**(-4)*(b0-a0))\n",
     "print('aproximacia korena s presnostou', np.abs(x4-x3))\n",
     "print('===================================================')\n",
-    "a4, b4 = a3, x4 \n",
+    "a4 = a3; b4 = x4  \n",
     "\n",
-    "# k = 5 \n",
+    "# k = 4 \n",
     "x5 = (a4+b4)/2\n",
-    "print('k=5:')\n",
+    "print('k=4:')\n",
     "print('f(a4)*f(x5)=',f(a4)*f(x5))\n",
     "print('x5=',x5) \n",
-    "print('absolutna chyba je nanajvys', 2**(-6)*(b0-a0)) \n",
+    "print('absolutna chyba je nanajvys', 2**(-5)*(b0-a0)) \n",
     "print('aproximacia korena s presnostou', np.abs(x5-x4))\n",
     "print('===================================================')\n",
-    "a5, b5 = x5, b4"
+    "a5 = x5; b5 = b4 \n",
+    "\n",
+    "# k = 5 \n",
+    "x6 = (a5+b5)/2\n",
+    "print('k=5:')\n",
+    "print('f(a4)*f(x6)=',f(a4)*f(x6))\n",
+    "print('x6=',x6) \n",
+    "print('absolutna chyba je nanajvys', 2**(-6)*(b0-a0)) \n",
+    "print('aproximacia korena s presnostou', np.abs(x6-x5))\n",
+    "print('===================================================')"
    ]
   },
   {
@@ -1966,7 +1981,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1980,7 +1995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
