--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -744,7 +744,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1388,7 +1387,7 @@
     "\\left|a_{rs}^{(k-1)}\\right|=\\underset{k\\le i, j\\le n}{\\max}\\left|a_{ij}^{(k-1)}\\right|.\n",
     "\\end{align*} \n",
     "\n",
-    "Následne sa vymení $k$-ta a $s$-ta rovnica a tiež sa vymení $k$-ta neznáma s $s$-tou neznámou - pozri nasledovný obrázok. \n",
+    "Následne sa vymení $k$-ta a $r$-ta rovnica a tiež sa vymení $k$-ta neznáma s $s$-tou neznámou - pozri nasledovný obrázok. \n",
     "\n",
     "![o3.PNG](attachment:o3.PNG) \n",
     "$$\\text{Zdroj: Čermák (2020).}$$ \n",
@@ -2666,7 +2665,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2680,7 +2679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
