--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -1118,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Priamy chod GEM vyžaduje $\\dfrac{1}{3}n^3+O\\left(n^2\\right)$ násobiacich operácií (t.j.násobenie alebo delenie) a tiež $\\dfrac{1}{3}n^3+O\\left(n^2\\right)$ sčítacích operácií (t.j. sčítanie alebo odčítanie). Symbolom $O\\left(n^2\\right)$ je označený rádovo menej významný počet operácii. Člen $\\dfrac{1}{3}n^2$ súvisí s transformáciou matice sústavy. Počet operácií súvisiaci s transformáciou pravej strany je o rád nižší a je teda zahrnutý do člena $O\\left(n^2\\right)$. \n",
+    "Priamy chod GEM vyžaduje $\\dfrac{1}{3}n^3+O\\left(n^2\\right)$ násobiacich operácií (t.j.násobenie alebo delenie) a tiež $\\dfrac{1}{3}n^3+O\\left(n^2\\right)$ sčítacích operácií (t.j. sčítanie alebo odčítanie). Symbolom $O\\left(n^2\\right)$ je označený rádovo menej významný počet operácii. Člen $\\dfrac{1}{3}n^3$ súvisí s transformáciou matice sústavy. Počet operácií súvisiaci s transformáciou pravej strany je o rád nižší a je teda zahrnutý do člena $O\\left(n^2\\right)$. \n",
     "\n",
     "Spätný chod GEM je výpočtovo podstatne menej naročný. Riešenie sústavy rovníc s trojuholníkovou maticou vyžaduje $\\dfrac{1}{2}n^2+O\\left(n\\right)$ násobiacich operácií a tiež $\\dfrac{1}{2}n^2+O\\left(n\\right)$ sčítacích operácií. \"GEM spätný chod\", t. j. výpočet $\\mathbf{x}$ zo sústavy $(4)$, preto vyžaduje $\\dfrac{1}{2}n^2+O\\left(n\\right)$ operácií a \"LU spätný chod\", t. j. výpočet $\\mathbf{x}$, $\\mathbf{y}$ zo sústav $(9)$, vyžaduje dvojnásobný počet operácií, čiže $n^2+O\\left(n\\right)$. \n",
     "\n",
@@ -2665,7 +2665,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2679,7 +2679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
