--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -936,7 +936,7 @@
     "resp.\n",
     "\n",
     "\\begin{align*}\\label{eq:ColStrictDiagDomin} \\tag{10b}\n",
-    "|a_{ii}| > \\displaystyle\\sum\\limits_{i=1\\\\i\\neq j}^{n}|a_{ij}|, \\quad i=1,2,\\ldots,n.  \n",
+    "|a_{jj}| > \\displaystyle\\sum\\limits_{i=1\\\\i\\neq j}^{n}|a_{ij}|, \\quad i=1,2,\\ldots,n.  \n",
     "\\end{align*} \n",
     "\n",
     "--- "
