--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -2015,7 +2015,7 @@
     "\n",
     "$$\\tilde{\\mathbf{x}}=(0.422,3.33)'.$$\n",
     "\n",
-    "Ak určíme (presne) **_reziduum_** $\\mathbf{r}=\\mathbf{b}-\\mathbf{A}\\tilde{\\mathbf{x}}$, tak dostaneme \n",
+    "Ak určíme (presne) **_rezíduum_** $\\mathbf{r}=\\mathbf{b}-\\mathbf{A}\\tilde{\\mathbf{x}}$, tak dostaneme \n",
     "\n",
     "$$\\mathbf{r}=\\begin{pmatrix}5.03 - 3.96 \\times 0.422 - 1.01 \\times 3.33\\\\ 1.25 - 1 \\times 0.422 - 0.25 \\times 3.33 \\end{pmatrix}=\\begin{pmatrix}-0.00442\\\\-0.00450\\end{pmatrix}.$$\n",
     "\n",
@@ -2036,16 +2036,16 @@
     "\n",
     "#### Poznámka 12 \n",
     "\n",
-    "* Napariek tomu, že Príklad 7 je značne umelý, je jednoduchou a užitočnou ilustráciou všeobecne platného tvrdenia: _Gaussova eliminácia s čiastočným výberom hlavných prvkov zaručuje vznik malých reziduí_.\n",
+    "* Napariek tomu, že Príklad 7 je značne umelý, je jednoduchou a užitočnou ilustráciou všeobecne platného tvrdenia: _Gaussova eliminácia s čiastočným výberom hlavných prvkov zaručuje vznik malých rezíduí_.\n",
     "\n",
     "\n",
-    "* Slovom \"zaručuje\" sa myslí to, že je možné dokázať matematickú vetu, ktorá (pri splnení určitých technických predpokladov súvisiacich s výpočtami s pohyblivou rádovou čiarkou) predstavuje nerovnosť obmedzujúcu veľkosť jednotlivých zložiek rezidua. \n",
+    "* Slovom \"zaručuje\" sa myslí to, že je možné dokázať matematickú vetu, ktorá (pri splnení určitých technických predpokladov súvisiacich s výpočtami s pohyblivou rádovou čiarkou) predstavuje nerovnosť obmedzujúcu veľkosť jednotlivých zložiek rezídua. \n",
     "\n",
     "\n",
     "* Ďalej výrazom \"malých\" sa rozumie \"rádovo veľkosť zaokrúhľovacích chýb relatívne vzhladom k trom veličinám:\" k veľkosti prvkov pôvodnej matice koeficientov $\\mathbf{A}$; k veľkosti prvkov matíc $\\mathbf{A}^{(k)}$ vznikajúcich v priebehu eliminácie; k veľkosti prvkov (približného) riešenia $\\tilde{\\mathbf{x}}$. \n",
     "\n",
     "\n",
-    "* I keď je reziduum malé, vyššie spomínané tvrdenie nehovorí nič o veľkosti chyby $\\tilde{\\mathbf{x}}-\\mathbf{x}$. K posúdeniu vzťahu medzi veľkosťou rezidua a veľkosťou chyby sa používa veličina známa ako _číslo podmienenosti matice_. \n",
+    "* I keď je rezíduum malé, vyššie spomínané tvrdenie nehovorí nič o veľkosti chyby $\\tilde{\\mathbf{x}}-\\mathbf{x}$. K posúdeniu vzťahu medzi veľkosťou rezídua a veľkosťou chyby sa používa veličina známa ako _číslo podmienenosti matice_. \n",
     "\n",
     "--- "
    ]
@@ -2418,7 +2418,7 @@
     "\\dfrac{\\lVert\\Delta\\mathbf{x}\\rVert}{\\lVert\\mathbf{x}\\rVert}\\le\\kappa(\\mathbf{A})\\dfrac{\\lVert\\Delta\\mathbf{b}\\rVert}{\\lVert\\mathbf{b}\\rVert}=\\kappa(\\mathbf{A})\\dfrac{\\lVert\\mathbf{r}\\rVert}{\\lVert\\mathbf{b}\\rVert}, \n",
     "\\end{align*}\n",
     "\n",
-    "kde $\\mathbf{r}=\\mathbf{b}-\\mathbf{A}(\\tilde{\\mathbf{x}})$ je reziduum ($\\Delta\\mathbf{b}=\\mathbf{A}\\tilde{\\mathbf{x}}-\\mathbf{b}=-\\mathbf{r}$, takže $\\lVert\\Delta\\mathbf{b}\\rVert=\\lVert\\mathbf{r}\\rVert$). Nerovnosť \\eqref{ineq:CondAnalysis2} potvrdzuje skúsenosť z Príkladu 7. Konkrétne ide o to, že malé reziduum nezaručuje malú chybu (v riešení). Na pravej strane nerovnosti \\eqref{ineq:CondAnalysis2} je totiž norma rezidua $\\lVert\\mathbf{r}\\rVert$ vynásobená číslom podmienenosti $\\kappa(\\mathbf{A})$ matice $\\mathbf{A}$, takže i keď je reziduum malé, napriek tomu môže byť relatívna chyba riešenia veľká, pokiaľ je $\\kappa(\\mathbf{A})$ veľké. \n"
+    "kde $\\mathbf{r}=\\mathbf{b}-\\mathbf{A}(\\tilde{\\mathbf{x}})$ je rezíduum ($\\Delta\\mathbf{b}=\\mathbf{A}\\tilde{\\mathbf{x}}-\\mathbf{b}=-\\mathbf{r}$, takže $\\lVert\\Delta\\mathbf{b}\\rVert=\\lVert\\mathbf{r}\\rVert$). Nerovnosť \\eqref{ineq:CondAnalysis2} potvrdzuje skúsenosť z Príkladu 7. Konkrétne ide o to, že malé rezíduum nezaručuje malú chybu (v riešení). Na pravej strane nerovnosti \\eqref{ineq:CondAnalysis2} je totiž norma rezídua $\\lVert\\mathbf{r}\\rVert$ vynásobená číslom podmienenosti $\\kappa(\\mathbf{A})$ matice $\\mathbf{A}$, takže i keď je rezíduum malé, napriek tomu môže byť relatívna chyba riešenia veľká, pokiaľ je $\\kappa(\\mathbf{A})$ veľké. \n"
    ]
   },
   {
