--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -2081,7 +2081,7 @@
     "\n",
     "### <font color=red> Definícia 4 </font> \n",
     "\n",
-    "***Norma vektora*** je funkcia $\\lVert\\cdot\\rVert:\\,\\,\\mathbb{R}^n\\to\\mathbb{R}_0^+$, $n\\in\\mathbb{N}$ taká, ktorá spĺňa nasledujúce podmienky: \n",
+    "**_Norma vektora_** je funkcia $\\lVert\\cdot\\rVert:\\,\\,\\mathbb{R}^n\\to\\mathbb{R}_0^+$, $n\\in\\mathbb{N}$ taká, ktorá spĺňa nasledujúce podmienky: \n",
     "\n",
     "1. $\\lVert\\mathbf{x}\\rVert=0$ práve vtedy, keď $\\mathbf{x}=\\mathbf{0}$, pričom $\\mathbf{x},\\mathbf{0}\\in\\mathbb{R}^n$ a $\\mathbf{0}=(0,0,\\ldots,0)'$; \n",
     "\n",
@@ -2234,7 +2234,7 @@
     "\\lVert\\mathbf{A}\\mathbf{x}\\rVert_V\\le\\lVert\\mathbf{A}\\rVert_M\\cdot\\lVert\\mathbf{x}\\rVert_V, \n",
     "\\end{align*} \n",
     "\n",
-    "hovoríme, že maticová norma $\\lVert\\cdot\\rVert_M$ je ***súhlasná*** (kompatibilná) s vektorovou normou $\\lVert\\cdot\\rVert_V$. Ľahko je možné overiť, že prirodzená maticová norma je s pridruženou vektorovou normou súhlasná. \n",
+    "hovoríme, že maticová norma $\\lVert\\cdot\\rVert_M$ je **_súhlasná_** (kompatibilná) s vektorovou normou $\\lVert\\cdot\\rVert_V$. Ľahko je možné overiť, že prirodzená maticová norma je s pridruženou vektorovou normou súhlasná. \n",
     "\n",
     "\n",
     "* Existujú aj iné prirodzené maticové normy. Jednou z nich je **_Frobeniova norma_** daná vzťahom \n",
