--- a/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
+++ b/Tema4/NUM_Tema4NumerickeIntegrovanie.ipynb
@@ -1612,13 +1612,13 @@
     "**Chyba Gaussovej-Legendrovej kvadratúrnej formule** sa dá vyjadriť v tvare \n",
     "\n",
     "\\begin{align*} \\label{eq:LegendrePolyFormErr} \\tag{28}\n",
-    "R_{Gn}(f) = d_nf^{(2n+2)}(\\eta_{Gn}), \\quad \\text{ kde } \\eta_{Gn}\\in(-1,1) \\quad \\text{ a } \\quad d_n=\\dfrac{2^{2n+3}\\left[(n+1)!\\right]^4}{(2n+3)\\left[(2n+2)\\right]^3}. \n",
+    "R_{Gn}(f) = d_nf^{(2n+2)}(\\eta_{Gn}), \\quad \\text{ kde } \\eta_{Gn}\\in(-1,1) \\quad \\text{ a } \\quad d_n=\\dfrac{2^{2n+3}\\left[(n+1)!\\right]^4}{(2n+3)\\left[(2n+2)!\\right]^3}. \n",
     "\\end{align*} \n",
     "\n",
     "**Koeficienty $w_i$ pre Gaussove-Legendrove formule** je možné vypočítať integráciou Lagrangeových bázických polynómov podľa vzťahu $w_i=\\displaystyle\\int_{-1}^{1}l_i(x)\\,\\mathrm{d}x$. Výhodnejšie je však použiť vzorec \n",
     "\n",
     "\\begin{align*} \\label{eq:GaussLegendreWeights} \\tag{29}\n",
-    "w_i=\\dfrac{2}{\\left(1-x_i^2\\right)^2\\left[P'_{n+1}(x_i)\\right]^2}, \\quad i=0,1,\\ldots,n. \n",
+    "w_i=\\dfrac{2}{\\left(1-x_i^2\\right)\\left[P'_{n+1}(x_i)\\right]^2}, \\quad i=0,1,\\ldots,n. \n",
     "\\end{align*} "
    ]
   },
