--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -180,7 +180,7 @@
     "<br/>\n",
     "$$\\varrho(\\mathbf{A})\\le\\lVert\\mathbf{A}\\rVert.$$\n",
     "<br/> \n",
-    "Môžeme teda vysloviť postačujúcu podmienku konvergencie: Ak je $\\lVert\\mathbf{T}\\rVert<1$, tak metóda prostej iterácie $(2)$ konverguje. \n",
+    "Môžeme teda vysloviť **postačujúcu podmienku konvergencie**: Ak je $\\lVert\\mathbf{T}\\rVert<1$, tak metóda prostej iterácie $(2)$ konverguje. \n",
     "\n",
     "\n",
     "* Pre konkrétne iteračné metódy uvedené ďalej, vyslovíme postačujúce podmienky konvergencie v inej - ľahšie overiteľnej forme. \n",
@@ -677,7 +677,7 @@
     "\n",
     "kde $\\mathbf{r}_k=\\mathbf{b}-\\mathbf{A}\\mathbf{x}_k\\neq\\mathbf{0}$ je reziduum (ak $\\mathbf{r}_k=0$, potom $\\mathbf{x}_k=\\mathbf{x}^*$), $\\alpha_k$ je koeficient určený tak, aby dĺžka $\\lVert\\mathbf{r}_{k+1}\\rVert_2$ vektora nového rezidua $\\mathbf{r}_{k+1}=\\mathbf{b}-\\mathbf{A}\\mathbf{x}_{k+1}$ bola minimálna. \n",
     "\n",
-    "Ďalej $(\\mathbf{u},\\mathbf{v})=\\mathbf{u}'\\mathbf{v}$ bude označovať skalárny súčin vektorov $\\mathbf{u}$, $\\mathbf{v}$. Tým pádom platí $\\lVert\\mathbf{u}\\rVert_2=(\\mathbf{u},\\mathbf{u})^{1/2}$. Dolný index $_2$ budeme teraz vynechávať, t.j. $\\lVert\\mathbf{u}\\rVert\\equiv\\lVert\\mathbf{u}\\rVert_2$. \n",
+    "Ďalej $(\\mathbf{u},\\mathbf{v})=\\mathbf{u}'\\mathbf{v}$ bude označovať **skalárny súčin vektorov** $\\mathbf{u}$, $\\mathbf{v}$. Tým pádom platí $\\lVert\\mathbf{u}\\rVert_2=(\\mathbf{u},\\mathbf{u})^{1/2}$. Dolný index $_2$ budeme teraz vynechávať, t.j. $\\lVert\\mathbf{u}\\rVert\\equiv\\lVert\\mathbf{u}\\rVert_2$. \n",
     "\n",
     "Koeficient $\\alpha_k$ dostaneme minimalizáciou funkcie \n",
     "\n",
@@ -941,7 +941,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1203,7 +1202,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1437,7 +1435,7 @@
     "\n",
     "tzn. $\\mathbf{x}_{k+1}$ sme určili tak, aby reziduum $\\mathbf{r}_{k+1}$ bolo ortogonálne k predchádzajúcemu reziduu $\\mathbf{r}_k$. \n",
     "\n",
-    "Všimnime si, že približné riešenie $\\mathbf{x}_{k+1}$ je minimom funkcie $\\psi(\\mathbf{x})=\\dfrac{1}{2}\\lVert\\mathbf{x}-\\mathbf{x}^*\\rVert^2_{\\mathbf{A}}$ na polpriamke $\\mathbf{x}_k+\\alpha\\mathbf{r}_k$, $\\alpha\\ge0$. Keďže $\\mathbf{r}_k=-\\nabla\\psi(\\mathbf{x}_k)$, tak minimum $\\mathbf{x}_{k+1}$ hľadáme v smere najväčšieho spádu (poklesu) funkcie $\\psi$, čo vysvetľuje názov metódy. \n",
+    "Všimnime si, že približné riešenie $\\mathbf{x}_{k+1}$ je minimom funkcie $\\psi(\\mathbf{x})=\\dfrac{1}{2}\\lVert\\mathbf{x}-\\mathbf{x}^*\\rVert^2_{\\mathbf{A}}$ na polpriamke $\\mathbf{x}_k+\\alpha\\mathbf{r}_k$, $\\alpha\\ge0$. Keďže $\\mathbf{r}_k=-\\nabla\\psi(\\mathbf{x}_k)$, tak **minimum $\\mathbf{x}_{k+1}$ hľadáme v smere najväčšieho spádu (poklesu) funkcie $\\psi$**, čo vysvetľuje názov metódy. \n",
     "\n",
     "Zovšeobecnením metódy najväčšieho spádu je *metóda ortogonálnej projekcie*. "
    ]
@@ -1755,7 +1753,7 @@
     "kde $\\kappa_2(\\mathbf{A})$ je spektrálne číslo podmienenosti matice $\\mathbf{A}$, t.j.\n",
     "<br/>\n",
     "<br/>\n",
-    "$$\\kappa_2(\\mathbf{A})=\\lVert\\mathbf{A}\\rVert_{2}\\cdot\\lVert\\mathbf{A}^2\\rVert_{2}=\\lambda_{max}(\\mathbf{A})/\\lambda_{min}(\\mathbf{A}),$$\n",
+    "$$\\kappa_2(\\mathbf{A})=\\lVert\\mathbf{A}\\rVert_{2}\\cdot\\lVert\\mathbf{A}^{-1}\\rVert_{2}=\\lambda_{max}(\\mathbf{A})/\\lambda_{min}(\\mathbf{A}),$$\n",
     "<br/>\n",
     "pričom $\\lambda_{max}(\\mathbf{A})$ resp. $\\lambda_{min}(\\mathbf{A})$ je najväčšie resp. najmenšie vlastné číslo matice $\\mathbf{A}$. \n",
     "\n",
@@ -2221,7 +2219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2235,7 +2233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
