--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -388,7 +388,7 @@
     "\n",
     "#### Poznámka 3\n",
     "\n",
-    "Dá sa dokázať, že **Gaussova-Seidelova metóda konverguje, keď $\\mathbf{A}$ je rýdzo diagonálne dominantná matica alebo pozitívne definitná matica**. \n",
+    "Dá sa dokázať, že **Gaussova-Seidelova metóda konverguje, keď $\\mathbf{A}$ je rýdzo diagonálne dominantná matica alebo (symetrická) pozitívne definitná matica**. \n",
     "\n",
     "---"
    ]
