Tema 6, Tema 7 updated.

--- a/Tema6/NUM_Tema6LinearneSystemy1.ipynb
+++ b/Tema6/NUM_Tema6LinearneSystemy1.ipynb
@@ -936,7 +936,7 @@
     "resp.\n",
     "\n",
     "\\begin{align*}\\label{eq:ColStrictDiagDomin} \\tag{10b}\n",
-    "|a_{jj}| > \\displaystyle\\sum\\limits_{i=1\\\\i\\neq j}^{n}|a_{ij}|, \\quad i=1,2,\\ldots,n.  \n",
+    "|a_{jj}| > \\displaystyle\\sum\\limits_{i=1\\\\i\\neq j}^{n}|a_{ij}|, \\quad j=1,2,\\ldots,n.  \n",
     "\\end{align*} \n",
     "\n",
     "--- "
@@ -951,6 +951,9 @@
     "#### Poznámka 4 \n",
     "\n",
     "* Definícia 1 vlastne hovorí, že v každom riadku resp. stĺpci je absolútna hodnota diagonálneho prvku väčšia než súčet absolútnych hodnôt zvyšných prvkov v danom riadku resp. stĺpci.  \n",
+    "\n",
+    "\n",
+    "* Pokiaľ vzťahy (10a), (10b) v Definícii 1 platia s neostrými nerovnosťami ale pre aspoň jedno $i$ resp. $j$ sú vzťahy splnené ako ostrá nerovnosť, potom vynechávame slovíčko \"rýdzo/ostro\" a hovoríme iba o **_riadkovej_** resp. **_stĺpcovej diagonálnej dominancii_**. Niekedy sa tiež používa výraz **_ireducibilná matica_**. Pokiaľ sú všetky nerovnosti splnené len ako neostré, tak hovoríme o tzv. **_slabej riadkovej_** resp. **_stĺpcovej dominancii_**. \n",
     "\n",
     "\n",
     "* Aj keď matica $\\mathbf{A}$ sústavy rovníc $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ nie je diagonálne dominantná, niekedy je možné vhodným \"preskladaním\" rovníc docieliť to, že nová matica $\\hat{\\mathbf{A}}$ takto vzniknutej ekvivalentnej sústavy rovníc $\\hat{\\mathbf{A}}\\mathbf{x}=\\hat{\\mathbf{b}}$ už diagonálne dominantná bude. \n",
