--- a/Tema7/NUM_Tema7LinearneSystemy2.ipynb
+++ b/Tema7/NUM_Tema7LinearneSystemy2.ipynb
@@ -353,7 +353,7 @@
     "\n",
     "#### Poznámka 2\n",
     "\n",
-    "Analýzou vlastností iteračnej matice $\\mathbf{T}=-\\mathbf{D}^{-1}(\\mathbf{L}+\\mathbf{U})$ sa dá ukázať, že **Jacobiho metóda konverguje vtedy, keď $\\mathbf{A}$ je rýdzo (striktne) diagonálne dominantná**. \n",
+    "Analýzou vlastností iteračnej matice $\\mathbf{T}=-\\mathbf{D}^{-1}(\\mathbf{L}+\\mathbf{U})$ sa dá ukázať, že **Jacobiho metóda konverguje vtedy, keď $\\mathbf{A}$ je rýdzo diagonálne dominantná alebo diagonálne dominantná.**. \n",
     "\n",
     "---"
    ]
@@ -388,7 +388,7 @@
     "\n",
     "#### Poznámka 3\n",
     "\n",
-    "Dá sa dokázať, že **Gaussova-Seidelova metóda konverguje, keď $\\mathbf{A}$ je rýdzo diagonálne dominantná matica alebo (symetrická) pozitívne definitná matica**. \n",
+    "Dá sa dokázať, že **Gaussova-Seidelova metóda konverguje, keď $\\mathbf{A}$ je (rýdzo) diagonálne dominantná matica alebo symetrická a pozitívne definitná matica**. \n",
     "\n",
     "---"
    ]
